--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="viewport" class="l-viewport">
           <div class="l-wrapper">
             <header class="header">
-              <a class="header--logo" href="#0">
+              <a class="header--logo" href="https://yalacha.com/">
                 <img src="assets/Logo/logo3.png" alt="Yalacha">
                 <p>JH Park</p>
               </a>
@@ -73,7 +73,7 @@
                     </a>
                     <a href="#0">
                       <h3>Trend Sensitive</h3>
-                      <p>I stay up to date with the latest developments in the software engineering field to deliver innovative solutions that meet modern business needs.</p>
+                      <p>Deliver innovative solutions that meet modern business needs.</p>
                     </a>
                   </div>
                 </div>
@@ -89,7 +89,7 @@
                             <img src="assets/img/work-victory.jpg" alt="Victory">
                           </div>
                           <p class="slider--item-title">Back End</p>
-                          <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                          <p class="slider--item-description"></p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-center">
@@ -107,7 +107,7 @@
                             <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                           </div>
                           <p class="slider--item-title">Data Engineering</p>
-                          <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                          <p class="slider--item-description"></p>
                         </a>
                       </li>
                     </ul>
@@ -134,8 +134,8 @@
               <li class="l-section section">
                 <div class="about">
                   <div class="about--banner">
-                    <h2>About <br> Me</h2>
-                    <a href="#0">Career
+                    <h2>About</h2>
+                    <!-- <a href="#0">Career
                       <span>
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                         <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -143,20 +143,19 @@
                         </g>
                         </svg>
                       </span>
-                    </a>
-                    <!-- <img src="assets/img/about-visual.png" alt="About Me"> -->
+                    </a> -->
                     <img src="assets/img/about.png" alt="About Me">
 
                   </div>
                   <div class="about--options">
-                    <a href="#0">
+                    <a href="https://www.troy.edu/" target="_blank" rel="noopener noreferrer">
                       <h3>School</h3>
                     </a>
                     <a href="#0">
-                      <h3>Philosophy</h3>
+                      <h3>Projects</h3>
                     </a>
-                    <a href="#0">
-                      <h3>Contact</h3>
+                    <a href="https://github.com/HoooonPark" target="_blank" rel="noopener noreferrer">
+                      <h3>Github</h3>
                     </a>
                   </div>
                 </div>
