--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <img src="assets/img/work-victory.jpg" alt="Victory">
                           </div>
                           <p class="slider--item-title">Back End</p>
-                          <p class="slider--item-description"></p>
+                          <p class="slider--item-description">Python&emsp; MyDWL&emsp; Node.js</p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-center">
@@ -98,7 +98,7 @@
                             <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
                           </div>
                           <p class="slider--item-title">Front End</p>
-                          <p class="slider--item-description">HTML&emsp; Css&emsp; JavaScript&emsp; </p>
+                          <p class="slider--item-description">HTML&emsp; Css&emsp; JavaScript&emsp; TypeScript&emsp; JQuery</p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-right">
@@ -107,7 +107,7 @@
                             <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                           </div>
                           <p class="slider--item-title">Data Engineering</p>
-                          <p class="slider--item-description"></p>
+                          <p class="slider--item-description">Python&emsp; Pytorch&emsp; Deeplearning</p>
                         </a>
                       </li>
                     </ul>
@@ -151,7 +151,7 @@
                     <a href="https://www.troy.edu/" target="_blank" rel="noopener noreferrer">
                       <h3>School</h3>
                     </a>
-                    <a href="#0">
+                    <a href="https://devpost.com/software/coconut-2ez1x9">
                       <h3>Projects</h3>
                     </a>
                     <a href="https://github.com/HoooonPark" target="_blank" rel="noopener noreferrer">
