--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <img src="assets/img/work-victory.jpg" alt="Victory">
                           </div>
                           <p class="slider--item-title">Back End</p>
-                          <p class="slider--item-description">Python&emsp; MyDWL&emsp; Node.js</p>
+                          <p class="slider--item-description">Python&emsp; MySQL&emsp; Node.js</p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-center">
@@ -135,17 +135,10 @@
                 <div class="about">
                   <div class="about--banner">
                     <h2>About</h2>
-                    <!-- <a href="#0">Career
-                      <span>
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                        <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                          <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                        </g>
-                        </svg>
-                      </span>
-                    </a> -->
+
                     <img src="assets/img/about.png" alt="About Me">
 
+                    
                   </div>
                   <div class="about--options">
                     <a href="https://www.troy.edu/" target="_blank" rel="noopener noreferrer">
