--- a/index.html
+++ b/index.html
@@ -80,34 +80,34 @@
               </li>
               <li class="l-section section">
                 <div class="work">
-                  <h2>My Desire</h2>
+                  <h2>Projects <br>& Skills</h2>
                   <div class="work--lockup">
                     <ul class="slider">
                       <li class="slider--item slider--item-left">
                         <a href="#0">
                           <div class="slider--item-image">
-                            <img src="assets/img/work-victory.jpg" alt="Victory">
+                            <img src="assets/img/backend.png" alt="Victory">
                           </div>
-                          <p class="slider--item-title">Back End</p>
-                          <p class="slider--item-description">Python&emsp; MySQL&emsp; Node.js</p>
+                          <p class="slider--item-title">Back-End</p>
+                          <p class="slider--item-description">Python&emsp; Java&emsp; Spring Framework&emsp; MongoDB&emsp; MySQL&emsp; PHP&emsp; Node.js</p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-center">
-                        <a href="#0">
+                        <a href="https://github.com/HoooonPark/Flight_Booking" target="_blank" rel="noopener noreferrer">
                           <div class="slider--item-image">
-                            <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                            <img src="assets/img/flightbook.png" alt="flightbook">
                           </div>
-                          <p class="slider--item-title">Front End</p>
-                          <p class="slider--item-description">HTML&emsp; Css&emsp; JavaScript&emsp; TypeScript&emsp; JQuery</p>
+                          <p class="slider--item-title">Flight Booker</p>
+                          <p class="slider--item-description">PHP&emsp; Css&emsp; JavaScript&emsp; XAMPP&emsp; MySQL</p>
                         </a>
                       </li>
                       <li class="slider--item slider--item-right">
                         <a href="#0">
                           <div class="slider--item-image">
-                            <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                            <img src="assets/img/front.png" alt="Alex Nowak">
                           </div>
-                          <p class="slider--item-title">Data Engineering</p>
-                          <p class="slider--item-description">Python&emsp; Pytorch&emsp; Deeplearning</p>
+                          <p class="slider--item-title">Front-End</p>
+                          <p class="slider--item-description">JavaScript&emsp; React&emsp; HTML&emsp; CSS&emsp; </p>
                         </a>
                       </li>
                     </ul>
@@ -145,7 +145,7 @@
                       <h3>School</h3>
                     </a>
                     <a href="https://devpost.com/software/coconut-2ez1x9">
-                      <h3>Projects</h3>
+                      <h3>Hackathon</h3>
                     </a>
                     <a href="https://github.com/HoooonPark" target="_blank" rel="noopener noreferrer">
                       <h3>Github</h3>
@@ -155,6 +155,7 @@
               </li>
               <li class="l-section section">
                 <div class="contact">
+                  <a class="contact--banner">Contact</a>
                   <div class="contact--lockup">
                     <div class="modal">
                       <div class="modal--information">
